<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.rypofalem.armorstandeditor</groupId>
    <artifactId>armorstandeditor</artifactId>
    <packaging>jar</packaging>
    <version>1.19.4-42</version>
    <name>armorstandeditor</name>
    <url>http://maven.apache.org</url>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven-release-plugin.version>3.0.0</maven-release-plugin.version>
        <sonar.organization>wolfieheart</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    </properties>

    <developers>
        <developer>
            <id>Wolfieheart</id>
            <name>Wolfieheart</name>
            <url>https://github.com/Wolfieheart</url>
        </developer>
        <developer>
            <id>RypoFalem</id>
            <name>RypoFalem</name>
            <url>https://github.com/RypoFalem</url>
        </developer>
    </developers>

    <repositories>
        <!-- Spigot MC -->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>paper-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <!-- Worldguard -->
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <!-- PlotSquared + CoreProtect -->
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <!-- Towny + GriefDefender-->
        <repository>
            <id>glaremasters repo</id>
            <url>https://repo.glaremasters.me/repository/towny/</url>
        </repository>
        <repository>
            <id>glaremasters</id>
            <url>https://repo.glaremasters.me/repository/bloodshot/</url>
        </repository>
        <!--- Update Checker -->
        <repository>
            <id>jeff-media-public</id>
            <url>https://hub.jeff-media.com/nexus/repository/jeff-media-public/</url>
        </repository>
        <!--- Grief Prevention: DEPRECATION - Discuss Keeping or Removing -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <!-- SuperiorSkyblock API -->
        <repository>
            <id>bg-repo</id>
            <url>https://repo.bg-software.com/repository/api/</url>
        </repository>
        <!-- Bentobox API -->
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <!--Spigot + Folia API-->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.19.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.folia</groupId>
            <artifactId>folia-api</artifactId>
            <version>1.19.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!--- WorldGuard -->
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.7</version>
            <scope>provided</scope>
        </dependency>
        <!--- PlotSquared -->
            <dependency>
                <groupId>com.plotsquared</groupId>
                <artifactId>PlotSquared-Core</artifactId>
                <version>6.11.1</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>com.plotsquared</groupId>
                <artifactId>PlotSquared-Bukkit</artifactId>
                <version>6.11.1</version>
                <scope>provided</scope>
                <exclusions>
                    <exclusion>
                        <artifactId>PlotSquared-Core</artifactId>
                        <groupId>*</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
        <!--- GriefPrevention -->
        <dependency>
            <groupId>com.github.TechFortress</groupId>
            <artifactId>GriefPrevention</artifactId>
            <version>16.18.1</version>
            <scope>provided</scope>
        </dependency>
        <!--- Towny -->
        <dependency>
            <groupId>com.palmergames.bukkit.towny</groupId>
            <artifactId>towny</artifactId>
            <version>0.99.0.1</version>
            <scope>provided</scope>
        </dependency>
        <!--- UpdateChecker -->
        <dependency>
            <groupId>com.jeff_media</groupId>
            <artifactId>SpigotUpdateChecker</artifactId>
            <version>3.0.2</version>
            <scope>compile</scope>
        </dependency>
        <!-- SuperiorSkyblock API -->
        <dependency>
            <groupId>com.bgsoftware</groupId>
            <artifactId>SuperiorSkyblockAPI</artifactId>
            <version>2023.1</version>
            <scope>provided</scope>
        </dependency>
        <!--- GriefDefender -->
        <dependency>
            <groupId>com.griefdefender</groupId>
            <artifactId>api</artifactId>
            <version>2.1.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Lands -->
        <dependency>
            <groupId>com.github.angeschossen</groupId>
            <artifactId>LandsAPI</artifactId>
            <version>6.28.11</version>
            <scope>provided</scope>
        </dependency>
        <!-- Bentobox -->
        <dependency>
            <groupId>world.bentobox</groupId>
            <artifactId>bentobox</artifactId>
            <version>1.22.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- Residence -->
        <dependency>
            <groupId>com.bekvon</groupId>
            <artifactId>Residence</artifactId>
            <version>5.1.1.1</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/src/main/resources/Residence5.1.1.1.jar</systemPath>
        </dependency>
    </dependencies>
    <!--Java 8-->
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>package</phase>
                        <goals>
                            <goal>attach-artifact</goal>
                        </goals>
                        <configuration>
                            <artifacts>
                                <artifact>
                                    <file>${project.build.directory}/${project.artifactId}.jar</file>
                                    <type>jar</type>
                                    <classifier>optional</classifier>
                                </artifact>
                            </artifacts>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>com.jeff_media.updatechecker</pattern>
                                    <shadedPattern>io.github.rypofalem.armorstandeditor.updatechecker</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
                <configuration>
                    <scmCommentPrefix>[ci skip] || [CI SKIP] || [CI-SKIP]</scmCommentPrefix>
                    <tagNameFormat>@{project.version}</tagNameFormat>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
